# legend-parent

./: .bazelrc  .gitmodules  MODULE.bazel  RowAccessor.java  RowLazyComponent.java  Runtime.java  RuntimeAccessor.java  RuntimeLazyComponent.java  apply_refactor.sh  apply_refactor_fixed.sh  bazel-bin  bazel-legend-parent  bazel-out  bazel-testlogs  generated_tests.bazel  maven_install.json
.agent/rules/: bazel-rules.md
tools/: BUILD.bazel  gen_compiled_test.py  zip_content_test.sh  zip_tree_artifacts.bzl  zip_tree_test.bzl
tools/build_rules/: java_model_generation.bzl  java_partition.bzl  java_validation.bzl  legend_java_library.bzl  pure_compiled.bzl  pure_generation.bzl
tools/compiled-test-generator/: BUILD.bazel
tools/compiled-test-generator/src/main/java/org/finos/legend/pure/tools/: CompiledTestGenerator.java
tools/partitioner/: BUILD.bazel
tools/partitioner/src/main/java/org/finos/legend/tools/partitioner/: JavaSourcePartitioner.java
tools/validation/: BUILD.bazel
tools/validation/src/main/java/org/finos/legend/tools/validation/: ImportValidator.java
