bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_jvm_external", version = "6.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind:2.10.5.1",
        "com.google.guava:guava:30.0-jre",
        "org.eclipse.collections:eclipse-collections:10.2.0",
        "org.eclipse.collections:eclipse-collections-api:10.2.0",
        "org.eclipse.collections:eclipse-collections-testutils:10.2.0",
        "org.slf4j:slf4j-api:1.7.36",
        # "junit:junit:4.13.1", # Transitive dependency of other test libs, usually provided
        "org.hamcrest:hamcrest-core:1.3",
        "io.dropwizard:dropwizard-core:1.3.29",
        "io.dropwizard:dropwizard-auth:1.3.29",
        "commons-io:commons-io:2.7",
        "org.apache.commons:commons-lang3:3.18.0",
        "org.apache.commons:commons-text:1.10.0",
        "org.antlr:antlr4-runtime:4.8-1",
        "org.antlr:antlr4:4.8-1",
        "javax.servlet:javax.servlet-api:3.1.0",
        "javax.ws.rs:javax.ws.rs-api:2.1.1",
        "javax.ws.rs:javax.ws.rs-api:2.1.1",
        # Pac4j 4.x (Restoring to match source code)
        "org.pac4j:pac4j-core:4.5.8",
        # jee-pac4j should satisfy org.pac4j.jee.*; managed transitively or added if needed
        "org.pac4j:pac4j-kerberos:4.5.8",
        "org.pac4j:pac4j-oidc:4.5.8",
        "org.pac4j:pac4j-http:4.5.8",
        "org.pac4j:dropwizard-pac4j:4.0.0", 
        "io.opentracing:opentracing-api:0.32.0",
        "io.opentracing:opentracing-util:0.32.0",
        "io.opentracing:opentracing-noop:0.32.0",
        "io.opentracing.contrib:opentracing-jaxrs2:0.5.0",
        "io.opentracing.brave:brave-opentracing:0.37.2",
        "io.zipkin.brave:brave:5.9.1",
        "org.mongodb:mongodb-driver-sync:5.3.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.10.5",
        "io.prometheus:simpleclient:0.9.0", 
        "io.zipkin.reporter2:zipkin-reporter:2.15.0",
        "io.zipkin.reporter2:zipkin-reporter:2.15.0",
        "io.zipkin.zipkin2:zipkin:2.21.1",
        "io.zipkin.zipkin2:zipkin:2.21.1",
        "com.hazelcast:hazelcast:4.2", 
        "org.commonjava.mimeparse:mimeparse:0.1.3.3",
        "io.dropwizard:dropwizard-testing:1.3.29",
        "io.opentracing:opentracing-mock:0.32.0",
        "org.mockito:mockito-core:3.3.3",
        "com.googlecode.json-simple:json-simple:1.1.1",
        "commons-codec:commons-codec:1.15",
        "org.apache.httpcomponents:httpclient:4.5.13",
        "org.apache.httpcomponents:httpcore:4.4.9",
        "io.github.classgraph:classgraph:4.8.25",
        "org.glassfish.jersey.test-framework:jersey-test-framework-core:2.25.1",
        "org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.25.1",
        "org.glassfish.jersey.media:jersey-media-json-jackson:2.25.1",
        "io.deephaven:deephaven-csv:0.12.0",
        "org.apache.tomcat:tomcat-dbcp:9.0.80",
        "org.apache.commons:commons-csv:1.9.0",
        "com.h2database:h2:2.1.214",
        "org.duckdb:duckdb_jdbc:1.0.0",
        "org.duckdb:duckdb_jdbc:1.0.0",
        "junit:junit:4.13.1",
        "org.bouncycastle:bcprov-jdk15on:1.67",
        "org.springframework.boot:spring-boot-autoconfigure:2.3.3.RELEASE",
        "com.squareup.okhttp3:mockwebserver:4.9.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven", "unpinned_maven")
